feat(performance): mejora de estabilidad, rendimiento y fluidez en BiblioHouse
- Fix memory leak en SplashController (Timer no cancelado → PauseTransition)
- Optimización de ImageLoader: carga de placeholders (O(n²) → O(1))
- Fix race condition en ImageLoader.loadImageAsync (listener vs carga instantánea)
- Eliminación de System.exit(0) en App.stop() para evitar corrupción de datos
- Reducción de renders en PrimaryController (clear + add → setAll)
- Adaptación de estilos inline a variables CSS de AtlantaFX (tema oscuro)
- Debounce en filtros de búsqueda para evitar renders redundantes
- Centralización de copia defensiva en guardarLibrosEnDisco()
- Fallback para ATOMIC_MOVE en JsonManager (cross-device compatibility)
- Eliminación de CompletableFuture anidado en BusquedaService
- Manejo de NumberFormatException en UpdateChecker
- Actualización de Runtime.exec → ProcessBuilder (deprecated API)
- Fix orden de inicialización en LoginController (auth file antes que datos)
- Corrección de discrepanica en pom.xml (Java 11 → 21)